maps crit calc. def calc. astro i18n

--- a/apps/astrolabe/index.html
+++ b/apps/astrolabe/index.html
@@ -120,6 +120,12 @@ description: 페르소나5 더 팬텀 X 성좌의 시련 (Trial of the Astrolabe
     });
 </script>
 <script src="{{ site.baseurl }}/apps/astrolabe/js/config.js?v={{ site.time | date: '%s' }}"></script>
+<script src="{{ site.baseurl }}/i18n/pages/astrolabe/kr.js?v={{ site.time | date: '%s' }}"></script>
+<script src="{{ site.baseurl }}/i18n/pages/astrolabe/en.js?v={{ site.time | date: '%s' }}"></script>
+<script src="{{ site.baseurl }}/i18n/pages/astrolabe/jp.js?v={{ site.time | date: '%s' }}"></script>
+<script src="{{ site.baseurl }}/i18n/pages/astrolabe/cn.js?v={{ site.time | date: '%s' }}"></script>
+<script src="{{ site.baseurl }}/i18n/pages/astrolabe/tw.js?v={{ site.time | date: '%s' }}"></script>
+<script src="{{ site.baseurl }}/i18n/pages/astrolabe/sea.js?v={{ site.time | date: '%s' }}"></script>
 <script src="{{ site.baseurl }}/apps/astrolabe/js/i18n.js?v={{ site.time | date: '%s' }}"></script>
 <script src="{{ site.baseurl }}/apps/astrolabe/js/data-loader.js?v={{ site.time | date: '%s' }}"></script>
 <script src="{{ site.baseurl }}/apps/astrolabe/js/adapt-sprite.js?v={{ site.time | date: '%s' }}"></script>
