--- a/apps/maps/index.html
+++ b/apps/maps/index.html
@@ -149,6 +149,9 @@ jp: /maps/?lang=jp
 </div>
 
 <script src="https://pixijs.download/release/pixi.min.js"></script>
+<script src="{{ site.baseurl }}/i18n/pages/maps/kr.js?v={{ site.time | date: '%s' }}"></script>
+<script src="{{ site.baseurl }}/i18n/pages/maps/en.js?v={{ site.time | date: '%s' }}"></script>
+<script src="{{ site.baseurl }}/i18n/pages/maps/jp.js?v={{ site.time | date: '%s' }}"></script>
 <script src="{{ site.baseurl }}/apps/maps/maps-i18n.js?v={{ site.time | date: '%s' }}"></script>
 <script src="{{ site.baseurl }}/apps/maps/maps-debug.js?v={{ site.time | date: '%s' }}"></script>
 <script src="{{ site.baseurl }}/apps/maps/object-click-handler.js?v={{ site.time | date: '%s' }}"></script>
