--- a/apps/critical-calc/index.html
+++ b/apps/critical-calc/index.html
@@ -175,6 +175,9 @@ description: 페르소나5 더 팬텀 X 크리티컬 확률 계산기
     -->
 </div>
 
+<script src="{{ site.baseurl }}/i18n/pages/critical-calc/kr.js?v={{ site.time | date: '%s' }}"></script>
+<script src="{{ site.baseurl }}/i18n/pages/critical-calc/en.js?v={{ site.time | date: '%s' }}"></script>
+<script src="{{ site.baseurl }}/i18n/pages/critical-calc/jp.js?v={{ site.time | date: '%s' }}"></script>
 <script>
     document.addEventListener('DOMContentLoaded', () => {
         Navigation.load('critical-calc', 1);
@@ -191,28 +194,30 @@ description: 페르소나5 더 팬텀 X 크리티컬 확률 계산기
         // SEO (defense-calc 동작 복사)
         function updateSEOContent() {
             const currentLang = typeof LanguageRouter !== 'undefined' ? LanguageRouter.getCurrentLanguage() : 'kr';
-            const seoData = {
-                kr: {
-                    title: '크리티컬 계산기 - 페르소나5 더 팬텀 X 루페르넷',
-                    description: '페르소나5 더 팬텀 X 크리티컬 확률 계산기'
-                },
-                en: {
-                    title: 'Critical Rate Calculator - Persona 5: The Phantom X LufelNet',
-                    description: 'Persona 5: The Phantom X Critical Rate Calculator'
-                },
-                jp: {
-                    title: 'クリ率計算機 - ペルソナ5 ザ・ファントム X LufelNet',
-                    description: 'ペルソナ5 ザ・ファントム X クリ率計算機'
-                }
+            const seoVarMap = {
+                kr: 'I18N_PAGE_CRITICAL_CALC_KR',
+                en: 'I18N_PAGE_CRITICAL_CALC_EN',
+                jp: 'I18N_PAGE_CRITICAL_CALC_JP',
+                cn: 'I18N_PAGE_CRITICAL_CALC_EN',
+                tw: 'I18N_PAGE_CRITICAL_CALC_EN',
+                sea: 'I18N_PAGE_CRITICAL_CALC_EN'
             };
-            const currentSEO = seoData[currentLang] || seoData.kr;
-            document.title = currentSEO.title;
+            const fallbackPack = window.I18N_PAGE_CRITICAL_CALC_KR || {};
+            const pack = window[seoVarMap[currentLang] || seoVarMap.kr] || fallbackPack;
+            const title = pack.seoTitle || fallbackPack.seoTitle || document.title;
+            const description = pack.seoDescription || fallbackPack.seoDescription || '';
+
+            document.title = title;
             const metaDescription = document.querySelector('meta[name="description"]');
+            const metaKeywords = document.querySelector('meta[name="keywords"]');
+            const ogLocale = document.querySelector('meta[property="og:locale"]');
             const ogTitle = document.querySelector('meta[property="og:title"]');
             const ogDescription = document.querySelector('meta[property="og:description"]');
-            if (metaDescription) metaDescription.setAttribute('content', currentSEO.description);
-            if (ogTitle) ogTitle.setAttribute('content', currentSEO.title);
-            if (ogDescription) ogDescription.setAttribute('content', currentSEO.description);
+            if (metaDescription) metaDescription.setAttribute('content', description);
+            if (metaKeywords && pack.seoKeywords) metaKeywords.setAttribute('content', pack.seoKeywords);
+            if (ogLocale && pack.seoOgLocale) ogLocale.setAttribute('content', pack.seoOgLocale);
+            if (ogTitle) ogTitle.setAttribute('content', title);
+            if (ogDescription) ogDescription.setAttribute('content', description);
         }
         updateSEOContent();
         new CriticalCalc();
