--- a/apps/defense-calc/index.html
+++ b/apps/defense-calc/index.html
@@ -359,6 +359,9 @@ redirect_from:
 </div>
 
 
+<script src="{{ site.baseurl }}/i18n/pages/defense-calc/kr.js?v={{ site.time | date: '%s' }}"></script>
+<script src="{{ site.baseurl }}/i18n/pages/defense-calc/en.js?v={{ site.time | date: '%s' }}"></script>
+<script src="{{ site.baseurl }}/i18n/pages/defense-calc/jp.js?v={{ site.time | date: '%s' }}"></script>
 <script>
     document.addEventListener('DOMContentLoaded', () => {
         Navigation.load('defense-calc');
@@ -421,28 +424,30 @@ redirect_from:
     // 언어별 SEO 설정
     function updateSEOContent() {
         const currentLang = typeof LanguageRouter !== 'undefined' ? LanguageRouter.getCurrentLanguage() : 'kr';
-        const seoData = {
-            kr: {
-                title: '방어력 감소 계산기 - 페르소나5 더 팬텀 X 루페르넷',
-                description: '페르소나5 더 팬텀 X 방어력 감소 계산기'
-            },
-            en: {
-                title: 'Defense Reduction Calculator - Persona 5: The Phantom X LufelNet',
-                description: 'Persona 5: The Phantom X Defense Reduction Calculator'
-            },
-            jp: {
-                title: '防御力減少計算機 - ペルソナ5 ザ・ファントム X LufelNet',
-                description: 'ペルソナ5 ザ・ファントム X 防御力減少計算機'
-            }
+        const seoVarMap = {
+            kr: 'I18N_PAGE_DEFENSE_CALC_KR',
+            en: 'I18N_PAGE_DEFENSE_CALC_EN',
+            jp: 'I18N_PAGE_DEFENSE_CALC_JP',
+            cn: 'I18N_PAGE_DEFENSE_CALC_EN',
+            tw: 'I18N_PAGE_DEFENSE_CALC_EN',
+            sea: 'I18N_PAGE_DEFENSE_CALC_EN'
         };
-        const currentSEO = seoData[currentLang] || seoData.kr;
-        document.title = currentSEO.title;
+        const fallbackPack = window.I18N_PAGE_DEFENSE_CALC_KR || {};
+        const pack = window[seoVarMap[currentLang] || seoVarMap.kr] || fallbackPack;
+        const title = pack.seoTitle || fallbackPack.seoTitle || document.title;
+        const description = pack.seoDescription || fallbackPack.seoDescription || '';
+
+        document.title = title;
         const metaDescription = document.querySelector('meta[name="description"]');
+        const metaKeywords = document.querySelector('meta[name="keywords"]');
+        const ogLocale = document.querySelector('meta[property="og:locale"]');
         const ogTitle = document.querySelector('meta[property="og:title"]');
         const ogDescription = document.querySelector('meta[property="og:description"]');
-        if (metaDescription) metaDescription.setAttribute('content', currentSEO.description);
-        if (ogTitle) ogTitle.setAttribute('content', currentSEO.title);
-        if (ogDescription) ogDescription.setAttribute('content', currentSEO.description);
+        if (metaDescription) metaDescription.setAttribute('content', description);
+        if (metaKeywords && pack.seoKeywords) metaKeywords.setAttribute('content', pack.seoKeywords);
+        if (ogLocale && pack.seoOgLocale) ogLocale.setAttribute('content', pack.seoOgLocale);
+        if (ogTitle) ogTitle.setAttribute('content', title);
+        if (ogDescription) ogDescription.setAttribute('content', description);
     }
 
     // 광고 흰 박스 숨김
