refactoring js css, and i18n maps

--- a/apps/critical-calc/index.html
+++ b/apps/critical-calc/index.html
@@ -1,13 +1,15 @@
 ---
 layout: default
-custom_css: [critical-calc]
-custom_js: [tooltip, character/character-list, defense/defense-i18n, calc/table-renderer, critical-calc]
+custom_js: [tooltip, character/character-list, defense/defense-i18n]
 custom_data: [tooltip.js, calc/critical-data.js, characters/characters.js]
 permalink: /critical-calc/
 language: kr
 title : 크리티컬 계산기 - 페르소나5 더 팬텀 X 루페르넷
 description: 페르소나5 더 팬텀 X 크리티컬 확률 계산기
 ---
+<link rel="stylesheet" href="/apps/critical-calc/critical-calc.css">
+<script src="/apps/critical-calc/table-renderer.js"></script>
+<script src="/apps/critical-calc/critical-calc.js"></script>
 
 <!-- 메인 컨텐츠 -->
 <div class="main-wrapper">
