--- a/apps/login/index.html
+++ b/apps/login/index.html
@@ -2,8 +2,9 @@
 layout: default
 title: 로그인
 language: kr
+permalink: /login/index.html
 ---
-<link rel="stylesheet" href="login.css">
+<link rel="stylesheet" href="/login/login.css">
 {% include supabase-config.html %}
 
 <div class="main-wrapper">
