--- a/apps/login/signup.html
+++ b/apps/login/signup.html
@@ -3,7 +3,7 @@ layout: default
 title: 회원가입
 permalink: /login/signup.html
 ---
-<link rel="stylesheet" href="login.css">
+<link rel="stylesheet" href="/login/login.css">
 {% include supabase-config.html %}
 
 <div class="auth-container">
