--- a/apps/pay-calc/index.html
+++ b/apps/pay-calc/index.html
@@ -1,14 +1,14 @@
 ---
 layout: default
-custom_css: [pay-calc]
-custom_js: [tooltip, pay-calc]
+custom_js: [tooltip]
 custom_data: [calc/pay-data.js]
 permalink: /pay-calc/
 language: kr
 title : 과금 계산기 - 페르소나5 더 팬텀 X 루페르넷
 description: 페르소나5 더 팬텀 X 과금 계산기
 ---
-
+<link rel="stylesheet" href="/apps/pay-calc/pay-calc.css">
+<script src="/apps/pay-calc/pay-calc.js"></script>
 
 <!-- main contents -->
 <div class="main-wrapper">
