--- a/apps/defense-calc/index.html
+++ b/apps/defense-calc/index.html
@@ -1,7 +1,6 @@
 ---
 layout: default
-custom_css: [defense-calc]
-custom_js: [tooltip, character/character-list, defense/defense-i18n, defense-calc]
+custom_js: [tooltip, character/character-list, defense/defense-i18n]
 custom_data: [tooltip.js, calc/boss.js, calc/defense-data.js, wonder/weapons.js, wonder/skills.js,
 characters/characters.js]
 permalink: /defense-calc/
@@ -14,6 +13,8 @@ jp: /defense-calc/?lang=jp
 redirect_from:
 - /kr/defense-calc/
 ---
+<link rel="stylesheet" href="/apps/defense-calc/defense-calc.css">
+<script src="/apps/defense-calc/defense-calc.js"></script>
 
 <script src="{{ site.baseurl }}/data/characters/J&C/JC_calc.js?v={{ site.time | date: '%s' }}"></script>
 <script src="{{ site.baseurl }}/data/persona/order.js?v={{ site.time | date: '%s' }}"></script>
