--- a/apps/login/forgot-password.html
+++ b/apps/login/forgot-password.html
@@ -3,7 +3,7 @@ layout: default
 title: 비밀번호 찾기
 permalink: /login/forgot-password.html
 ---
-<link rel="stylesheet" href="login.css">
+<link rel="stylesheet" href="/login/login.css">
 {% include supabase-config.html %}
 
 <div class="auth-container">
