--- a/apps/patch-console/index.html
+++ b/apps/patch-console/index.html
@@ -109,6 +109,7 @@
                     <button id="btn-select-all" class="btn ghost small">전체 선택</button>
                     <button id="btn-clear-select" class="btn ghost small">선택 해제</button>
                     <button id="btn-patch-selected" class="btn danger small">선택 행 실제 반영</button>
+                    <button id="btn-ignore-selected" class="btn ghost small">선택 행 Diff 무시</button>
                   </div>
                 </div>
                 <div class="table-tools">
