--- a/apps/home/index.html
+++ b/apps/home/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-custom_css: [home, tactic-posts]
-custom_js: [tactic-posts-home, tactic-preview, /tactic/share, home/popular-characters, home/guides-home]
+custom_css: [tactic-posts]
+custom_js: [tactic-preview, /tactic/share]
 custom_data: [/characters/characters.js]
 permalink: /
 redirect_from:
@@ -14,6 +14,10 @@ alternate_urls:
 en: /?lang=en
 jp: /?lang=jp
 ---
+<link rel="stylesheet" href="/apps/home/home.css">
+<script src="/apps/home/tactic-posts-home.js"></script>
+<script src="/apps/home/js/popular-characters.js"></script>
+<script src="/apps/home/js/guides-home.js"></script>
 
 {% if page.alternate_urls %}
 <link rel="alternate" hreflang="ko" href="{{ site.url }}/" />
@@ -320,16 +324,16 @@ jp: /?lang=jp
 </div>
 
 <!-- Carousel JS -->
-<script src="{{ site.baseurl }}/assets/js/home/carousel.js?v={{ site.time | date: '%s' }}"></script>
+<script src="/apps/home/js/carousel.js?v={{ site.time | date: '%s' }}"></script>
 <!-- Tooltip (for affix hover) -->
 <script src="{{ site.baseurl }}/assets/js/tooltip.js?v={{ site.time | date: '%s' }}"></script>
 <!-- Bosses JS -->
-<script src="{{ site.baseurl }}/assets/js/home/bosses.js?v={{ site.time | date: '%s' }}"></script>
+<script src="/apps/home/js/bosses.js?v={{ site.time | date: '%s' }}"></script>
 <!-- SOS JS -->
-<script src="{{ site.baseurl }}/assets/js/home/sos.js?v={{ site.time | date: '%s' }}"></script>
+<script src="/apps/home/js/sos.js?v={{ site.time | date: '%s' }}"></script>
 <!-- Quick Grid JS -->
-<script src="{{ site.baseurl }}/assets/js/home/quick-grid.js?v={{ site.time | date: '%s' }}"></script>
-<link rel="stylesheet" href="{{ site.baseurl }}/assets/js/home/carousel.css?v={{ site.time | date: '%s' }}">
+<script src="/apps/home/js/quick-grid.js?v={{ site.time | date: '%s' }}"></script>
+<link rel="stylesheet" href="/apps/home/js/carousel.css?v={{ site.time | date: '%s' }}">
 
 
 <script>
