characters to apps & schedule full i18n

--- a/apps/character/character.html
+++ b/apps/character/character.html
@@ -6,6 +6,7 @@ character/character-i18n, character/helpmodal, character/QEVEL]
 custom_data: [characters/characters.js, revelations/revelations.js,
 tooltip.js, wonder/weapons.js]
 permalink: /character.html
+redirect_from: []
 language: kr
 title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
 ---
