--- a/apps/character/index.html
+++ b/apps/character/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 custom_css: [character]
-
+permalink: /character/
 redirect_from:
 - /kr/character/
 - /kr/character/index.html
